--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,8 +1,11 @@
 .user-component {
   justify-content: space-between;
 }
-.user-component,
 .user-component__column {
+  margin-bottom: 10px;
+}
+.user-component,
+.user-component__column:first-child {
   display: flex;
   align-items: center;
 }
@@ -34,5 +37,12 @@
   font-weight: 400;
 }
 .user-component__column:last-child {
-  opacity: 0.5;
+  color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.user-component__time {
+  display: block;
+  margin-bottom: 10px;
 }
