--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,12 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
+@import "components/point.css";
 /*Screens*/
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 body {
   font-family: Arial, Helvetica, sans-serif;
   height: 1000vh;
