--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,17 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/alt-screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/point.css";
+@import "components/icon-row.css";
 /*Screens*/
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
 body {
   font-family: Arial, Helvetica, sans-serif;
   height: 1000vh;
