--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -9,3 +9,20 @@
   font-size: 28px;
   font-weight: 600;
 }
+.alt-header__column:nth-of-type(1) {
+  margin-right: auto;
+}
+.alt-header__column:nth-of-type(2) {
+  text-align: center;
+}
+.alt-header__column:nth-of-type(3) {
+  margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
+}
+.alt-header__column span:nth-of-type(2) {
+  margin-left: 20px;
+}
+.alt-header__column {
+  width: 33%;
+}
