Add animation& Set size

--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -15,6 +15,17 @@
   position: relative;
   color: #2e363e;
 }
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(180deg);
+  }
+  100% {
+    transform: none;
+  }
+}
 .nav__notification {
   display: flex;
   justify-content: center;
@@ -28,10 +39,33 @@
   position: absolute;
   left: 15px;
   bottom: 15px;
+  animation: notificationAnimation 2s ease-in-out infinite;
 }
 .nav__btn:last-child span {
   width: 7px;
   height: 7px;
   left: 30px;
   bottom: 25px;
+}
+@keyframes appearBtnAnimation {
+  from {
+    transform: translateY(80px);
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+.nav__btn {
+  animation: appearBtnAnimation 1s ease-in-out forwards;
+}
+.nav__btn:nth-of-type(2) {
+  animation-delay: 0.5s;
+}
+.nav__btn:nth-of-type(3) {
+  animation-delay: 1s;
+}
+.nav__btn:nth-of-type(4) {
+  animation-delay: 1.5s;
 }
