--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -12,3 +12,7 @@
 .screen-header__icons span {
   margin-left: 25px;
 }
+
+.screen-header__icons .fa-cog:hover {
+  box-shadow: 1px 3px 3px var(--yellow);
+}
