--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -25,3 +25,25 @@
   opacity: 0.5;
   margin-bottom: 20px;
 }
+@keyframes hideSplashScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden; /*이거까지 해야지 클릭가능*/
+  }
+}
+#splash-screen {
+  background-color: var(--yellow);
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  font-size: 128px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: hideSplashScreen 0.4s ease-in-out forwards; /*animation 후 안보이게 하려면 forwards 사용*/
+  animation-delay: 2s;
+}
